force-app/main/default/objects/FlowLog__c/FlowLog__c.object-meta.xml
<CustomObject>
    <label>Flow Log</label>
    <nameField>
        <displayFormat>LOG - {000000000}</displayFormat>
        <label>N° Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flow Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>