force-app/main/default/objects/FlowLog__c/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <label>Date and Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>