force-app/main/default/objects/FlowLog__c/fields/FlowType__c.field-meta.xml
<CustomField>
    <fullName>FlowType__c</fullName>
    <label>Flow Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>